--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
   <meta name="description" content="Boilerplate for React application made by rkoziol">
   <meta name="author" content="rkoziol">
   <title>React Application</title>
+  <link
+          href="https://fonts.cdnfonts.com/css/graphik"
+          rel="stylesheet"
+  />
 </head>
 <body>
   <div id="root"></div>
